Fix memory leaks and set QSS style for error prompt label

--- a/style/stylesheet.qss
+++ b/style/stylesheet.qss
@@ -7,3 +7,13 @@ QDialog#LoginDialog, #RegisterDialog
 {
     color:black;
 }
+
+#err_tip[state='normal']
+{
+   color: green;
+}
+
+#err_tip[state='err']
+{
+   color: red;
+}
