--- a/client/style/stylesheet.qss
+++ b/client/style/stylesheet.qss
@@ -17,3 +17,44 @@ QDialog#LoginDialog, #RegisterDialog
 {
    color: red;
 }
+
+#pass_visible[state='unvisible']
+{
+   border-image: url(:/res/unvisible.png);
+}
+
+#pass_visible[state='unvisible_hover']
+{
+   border-image: url(:/res/unvisible_hover.png);
+}
+
+#pass_visible[state='visible']
+{
+   border-image: url(:/res/visible.png);
+}
+
+#pass_visible[state='visible_hover']
+{
+   border-image: url(:/res/visible_hover.png);
+}
+
+
+#confirm_visible[state='unvisible']
+{
+   border-image: url(:/res/unvisible.png);
+}
+
+#confirm_visible[state='unvisible_hover']
+{
+   border-image: url(:/res/unvisible_hover.png);
+}
+
+#confirm_visible[state='visible']
+{
+   border-image: url(:/res/visible.png);
+}
+
+#confirm_visible[state='visible_hover']
+{
+   border-image: url(:/res/visible_hover.png);
+}
