feat: forget pwd UI

--- a/client/style/stylesheet.qss
+++ b/client/style/stylesheet.qss
@@ -58,3 +58,11 @@ QDialog#LoginDialog, #RegisterDialog
 {
    border-image: url(:/res/visible_hover.png);
 }
+
+#forget_label[state='normal'],#forget_label[state='selected']{
+    color:black;
+}
+
+#forget_label[state='hover'], #forget_label[state='selected_hover']{
+    color: rgb(42, 112, 241);
+}
